# ProjectRobotLogistic

./: .gitignore  CMakeLists.txt  OUR_SCHEMATICA.drawio  main.cpp  requests.cpp  zayavki.cpp  Входная страница.pdn  Диаграмма без названия.drawio  Проект «Робот-логист».pptx  Страница состояния.pdn
Robot_App/: CMakeLists.txt
Robot_App/classes/: Button.cpp  Graf.cpp  Queue.cpp  Queue.h  RadioButton.cpp  RadioButton.h  RadioButtonControl.cpp  RadioButtonControl.h  Request.cpp  Request.h  TextureButton.cpp  TextureButton.h  button.cpp  button.h  graf.h  queue.cpp  queue.h  radioButton.h  radioButtonControl.h  radiobutton.cpp  radiobuttoncontrol.cpp  request.cpp  request.h  textureButton.cpp  textureButton.h
Robot_App/libs/raylib-4.1/: CHANGELOG  CONVENTIONS.md  HISTORY.md  README.md
Robot_App/libs/raylib-4.1/examples/: examples_template.c
Robot_App/libs/raylib-4.1/examples/audio/: audio_module_playing.c  audio_multichannel_sound.c  audio_music_stream.c  audio_raw_stream.c  audio_sound_loading.c
Robot_App/libs/raylib-4.1/examples/core/: core_2d_camera.c  core_3d_camera_free.c  (+27 more)
Robot_App/libs/raylib-4.1/parser/: raylib_api.json  raylib_api.lua  raylib_api.txt  raylib_api.xml
Robot_App/libs/raylib-4.1/src/: raudio.c  raudio.h  raylib.h  rcore.c  rmodels.c  rshapes.c  rtext.c  rtextures.c
Robot_App/src/: App.cpp  App.h  app.cpp  app.h  main.cpp
arduino/arduinoCode/: arduinoCode.ino
diagrams_and_pictures/: Страница завершения.pdn  Страница заказа.pdn
robot/: ceSerial.h  graf.cpp  graf.h  main.cpp  mainRobot.cpp  request.cpp  requests.cpp  robot.cpp  robot.h
(+104 files in other folders)
